--- a/src/component/portfolio/portfolio.css
+++ b/src/component/portfolio/portfolio.css
@@ -1,5 +1,5 @@
 .portfolio_container{
     display: grid;
-    grid-template-columns: 3fr 3fr;
+    grid-template-columns: 2fr 2fr 2fr ;
     gap: 2rem;
 }
